tests/neg-custom-args/captures/leaky.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leaky.scala:17:11 ----------------------------------------
17 |  Transform(f)  // error
   |  ^^^^^^^^^^^^
   |  Found:    test.runnable.Transform{val fun: (f : Any ->{a} Any)}^{f}
   |  Required: test.runnable.Transform
   |
   |  Note that capability f is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leaky.scala:24:2 -----------------------------------------
24 |  x  // error
   |  ^
   |  Found:    test.runnable.Transform{val fun: Any ->{a} Any}^{a}
   |  Required: test.runnable.Transform
   |
   |  Note that capability a is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leaky.scala:31:2 -----------------------------------------
31 |  x  // error
   |  ^
   |  Found:    test.runnable.Transform{val fun: Any ->{a} Any}^{a}
   |  Required: test.runnable.Transform
   |
   |  Note that capability a is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
